# breadcrumbs

./: .autorc  .gitattributes  .gitignore  BreadcrumbsView.svelte  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README-beta.md  README.md  SampleSettingTab.ts  V4.md  breadcrumbs-test-vault.json  data.backup.json  esbuild.config.mjs  esbuild.config.ts  eslint.config.mjs  fophidian.ts  fophidian.types.ts  main.css  main.js  main.ts  manifest-beta.json  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  styles.css  tailwind.config.js  test.html  tsconfig.json  types.d.ts  version-bump-beta.mjs  versions.json  vite.config.mjs  wasmPlugin.mjs
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  release.yml  stale.yml
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: BCAPI.html
docs/interfaces/: BCAPII.html
src/: API.ts  BreadcrumbsSettingTab.ts  BreadcrumbsView.svelte  Codeblocks.ts  CreateIndex.ts  Debugger.ts  DownView.ts  DucksView.ts  FieldSuggestor.ts  Filler.svelte  HierNoteModal.ts  HierarchyNoteManipulator.ts  List.svelte  Lists.svelte  Matrix.svelte  MatrixView.ts  ModifyHierItemModal.ts  RelationSuggestor.ts  Relations.ts  Square.svelte  StatsView.ts  TrailGrid.svelte  TrailPath.svelte  TreeView.ts  VisModal.ts  VisView.ts  WriteBCsToAllFiles.ts  constants.ts  graphUtils.ts  index.ts  interfaces.ts  jumpToFirstDir.ts  main.ts  refreshIndex.ts  sharedFunctions.ts  styles.css  test.js  test.ts  threading.ts  utils.js  (+3 more)
src/AlternativeHierarchies/: CSVCrumbs.ts  DataviewNotes.ts  DateNotes.ts  DendronNotes.ts  LinkNotes.ts  (+6 more)
test/: Traversals.dfsAllPaths1.approved.txt  When_running_some_tests.should_be_able_to_use_Approvals.approved.txt  approvals1.1.spec.ts  approvals1.ts  createIndex.ts  dfsAllPaths.2.approved.txt  dfsAllPaths.ts  getReflexiveClosure.ts  mocha.opts  obsimian.ts  test.js  test.ts  testUtils.ts  typescript_simple_Approvals_tests__1_1.tutu.approved.txt
wasm/: Cargo.toml  README.md  rustfmt.toml
wasm/.cargo/: config.toml
wasm/src/: edge_sorting.rs  graph.rs  graph_construction.rs  graph_data.rs  graph_mermaid.rs  graph_rules.rs  graph_traversal.rs  graph_update.rs  lib.rs  mermaid.rs  utils.rs
wasm/src/data/: construction.rs  edge.rs  edge_list.rs  edge_struct.rs  mod.rs  node.rs  rules.rs  traversal.rs
wasm/src/traversal/: mod.rs  options.rs  path.rs
wasm/src/update/: batch.rs  graph.rs  mod.rs
wasm/tests/: graph.rs  mermaid.rs  update.rs
wasm/tests/common/: mod.rs
(+271 files in other folders)
