[package]
name = "breadcrumbs_graph_wasm"
version = "0.1.0"
authors = ["Moritz Jung <m.projects.code@gmail.com>", "SkepticMystic"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
test = []

[dependencies]
wasm-bindgen = "=0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
petgraph = "0.8.1"
web-time = "1.1.0"
js-sys = "0.3.77"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
smallvec = "1.15.0"
vec-collections = "0.4.3"
enum_dispatch = "0.3.13"
hashbrown = "0.15.3"
indoc = "2.0.6"
indexmap = "2.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = 3               # Highest level of optimization.
lto = "thin"                # Enable link-time optimization.
overflow-checks = false     # Disable integer overflow checks.
incremental = true          # Enable incremental compilation for faster builds.
